--- a/events-hub/src/app/home/home.component.html
+++ b/events-hub/src/app/home/home.component.html
@@ -1,1 +1,34 @@
-<p>home works!</p>
+<div>
+    <div class="banner">
+        <!-- <nav id="nav">
+            <img src="" class="logo" alt="logo-website" />
+            <ul id="linknav">
+                <li><a href="./index.html">Acasa</a></li>
+                <li><a href="#">Organizeaza evenimente</a></li>
+                <li>
+                    <div class="contulmeu">
+                        <span class="material-symbols-outlined">person</span>
+                        <a href="#">Contul meu</a>
+                    </div>
+                </li>
+
+
+            </ul>
+        </nav> -->
+        <div class="content">
+            <h1 class="maintext">
+                Descopera evenimente, cumpara bilete si distreaza-te
+            </h1>
+        </div>
+        <!--<div class="login">
+        <h1>Alatura-te comunitatii</h1>
+        <div class="border"></div>
+        <button>Creare cont</button>
+        <button>Autentifica-te</button>
+      </div>-->
+        <div class="scrolldown">
+            <p>Distractia te asteapta</p>
+            <span class="material-symbols-outlined da">❯</span>
+        </div>
+    </div>
+</div>
