--- a/events-hub/src/app/home/home.component.html
+++ b/events-hub/src/app/home/home.component.html
@@ -28,7 +28,8 @@
       </div>-->
         <div class="scrolldown">
             <p>Distractia te asteapta</p>
-            <span class="material-symbols-outlined da">❯</span>
+            <span class="material-symbols-outlined"></span>
+            <span class="material-symbols-outlined da">></span>
         </div>
     </div>
 </div>
