--- a/events-hub/src/app/register/register.component.html
+++ b/events-hub/src/app/register/register.component.html
@@ -1,61 +1,39 @@
-<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-    <div class="max-w-md w-full space-y-8">
-        <div>
-            <img class="mx-auto h-16 w-auto" src="../assets/logo.png" alt="Workflow">
-            <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Înregistrare parteneri</h2>
+<div class="content d-flex justify-content-center">
+    <form class="w-50 mt-10">
+        <img class="mt-10 mb-4 rounded mx-auto d-block" src="../assets/logo.png" alt="" width="50" height="50">
+        <h1 class="h3 mb-3 text-center fw-normal">Înregistrare parteneri</h1>
+
+        <div class="form-floating mb-2">
+            <input type="email" [class]="errors.email ? 'form-control is-invalid' : 'form-control' " id="floatingInput"
+                (change)="onChangeEvent($event)" [(ngModel)]="user.email" name="email" placeholder="name@example.com"
+                required>
+            <label for="floatingInput">Email</label>
+
+            <div *ngIf="errors.email" class="invalid-feedback px-3 py-2 ">
+                {{errors.email}}</div>
+
         </div>
-        <form class="mt-8 space-y-6">
-            <input type="hidden" name="remember" value="true">
-            <div class="rounded-md shadow-sm -space-y-px">
-                <div>
-                    <label for="email-address" class="sr-only">Email</label>
-                    <input id="email-address" (change)="onChangeEvent($event)" [(ngModel)]="user.email" name="email"
-                        type="email" autocomplete="email" required
-                        class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                        placeholder="Email" required>
+        <div class="form-floating mb-2">
+            <input type="password" [class]="errors.password ? 'form-control is-invalid' : 'form-control' "
+                id="floatingPassword" (change)="onChangeEvent($event)" [(ngModel)]="user.password" name="password"
+                placeholder="******" required>
+            <label for="floatingPassword">Parolă</label>
+            <div *ngIf="errors.password" class="invalid-feedback px-3 py-2 ">
+                {{errors.password}}</div>
+        </div>
+        <div class="form-floating mb-2">
+            <input type="password" [class]="errors.rePassword ? 'form-control is-invalid' : 'form-control' "
+                id="floatingPassword" placeholder="*******" (change)="onChangeEvent($event)" [(ngModel)]="rePassword"
+                name="rePassword" required>
+            <label for="floatingPassword">Reintroduceți parola</label>
+            <div *ngIf="errors.rePassword" class="invalid-feedback px-3 py-2 ">
+                {{errors.rePassword}}</div>
+        </div>
 
-                    <p *ngIf="errors.email" class="px-3 py-2 text-sm text-red-600 dark:text-red-500">{{errors.email}}
-                    </p>
+        <button (click)="onFormSubmitted()" [disabled]="cannotBeSubmitted"
+            [class]="cannotBeSubmitted ? 'btn btn-lg btn-secondary w-100' : 'btn btn-lg btn-primary w-100'">
+            Înregistrare
+        </button>
 
-                </div>
-                <div>
-                    <label for="password" class="sr-only">Parolă</label>
-                    <input id="password" (change)="onChangeEvent($event)" [(ngModel)]="user.password" name="password"
-                        type="password" autocomplete="current-password" required
-                        class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                        placeholder="Parolă" required>
-
-                    <p *ngIf="errors.password" class="px-3 py-2 text-sm text-red-600 dark:text-red-500">
-                        {{errors.password}}</p>
-
-                </div>
-                <div>
-                    <label for="rePassword" class="sr-only">Reintroduceți parola</label>
-                    <input id="rePassword" (change)="onChangeEvent($event)" [(ngModel)]="rePassword" name="rePassword"
-                        type="password" autocomplete="current-password" required
-                        class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                        placeholder="Reintroduceți parola" required>
-                    <p *ngIf="errors.rePassword" class="px-3 py-2 text-sm text-red-600 dark:text-red-500">
-                        {{errors.rePassword}}</p>
-                </div>
-            </div>
-
-            <div>
-                <button (click)="onFormSubmitted()" [disabled]="cannotBeSubmitted"
-                    class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none">
-                    <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <!-- Heroicon name: solid/lock-closed -->
-                        <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
-                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                            aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </span>
-                    Înregistrare
-                </button>
-            </div>
-        </form>
-    </div>
+    </form>
 </div>
