--- a/events-hub/src/app/app.component.css
+++ b/events-hub/src/app/app.component.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 
 .company-name {
   font-size: 15px;
@@ -23,4 +19,6 @@
 .title-icon {
   width : 40px;
   height: 40px;
+  margin-left: 4px;
+  margin-right: 4px;
 }
