--- a/events-hub/src/app/login/login.component.css
+++ b/events-hub/src/app/login/login.component.css
@@ -1,5 +1,31 @@
-/* vezi doumentatie si exemple */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+  .form-signin {
+      max-width: 330px;
+      padding: 15px;
+  }
 
+  .form-signin .form-floating:focus-within {
+      z-index: 2;
+  }
+
+  .form-signin input[type="email"] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+  }
+
+  .form-signin input[type="password"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+  }
+
+  .content {
+      height:100%;
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #f5f5f5;
+  }
